refactor: introduce search strategy to support Elasticsearch (local) and ZincSearch (prod)